[package]
name = "launchk"
version = "0.1.5"
authors = ["David Stancu <dstancu@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xpc-sys = { path= "../xpc-sys" }
lazy_static = "1.4.0"
cursive = { version = "0.19.0", features = ["toml"] }
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
plist = "1.3.1"
bitflags = "1.3.2"
notify = "5.0.0"
log = "0.4.14"
env_logger = "0.9.0"
notify-debouncer-mini = { version = "*", default-features = false }