[package]
name = "launchk"
version = "0.3.0"
authors = ["David Stancu <dstancu@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xpc-sys = { path= "../xpc-sys" }
lazy_static = "1.5.0"
cursive = { version = "0.21.1", features = ["toml"] }
tokio = { version = "1.45.0", features = ["full"] }
plist = "1.7.1"
bitflags = "2.9.1"
notify = "8.0.0"
log = "0.4.27"
env_logger = "0.11.8"
notify-debouncer-mini = { version = "*", default-features = false }
sudo = "0.6.0"
clearscreen = "4.0.1"
git-version = "0.3.9"
regex = "1.11.1"