[package]
name = "xpc-sys"
description = "Conveniently call routines with wrappers for xpc_pipe_routine() and go from Rust types to XPC objects and back!"
version = "0.2.0"
authors = ["David Stancu <dstancu@nyu.edu>"]
license = "MIT"
edition = "2018"
keywords = ["apple", "xpc", "xpc-dictionary"]
categories = ["external-ffi-bindings", "os::macos-apis"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target
targets = ["x86_64-apple-darwin"]

[dependencies]
block = "0.1.6"
lazy_static = "1.4.0"
log = "0.4.14"
bitflags = "1.2.1"
libc = "0.2.94"

[build-dependencies]
bindgen = "0.53.1"
xcrun = "1.0.4"
