[package]
name = "xpc-sys"
description = "Conveniently call routines with wrappers for xpc_pipe_routine() and go from Rust types to XPC objects and back!"
version = "0.5.1"
authors = ["David Stancu <dstancu@nyu.edu>"]
license = "MIT"
edition = "2018"
keywords = ["apple", "xpc", "xpc-dictionary"]
categories = ["external-ffi-bindings", "os::macos-apis"]
repository = "https://github.com/mach-kernel/launchk"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
block = "0.1.6"
lazy_static = "1.4.0"
log = "0.4.20"
bitflags = "2.4.0"
libc = "0.2.147"
mach2 = "0.4.2"

[build-dependencies]
bindgen = "0.69.1"
xcrun = "1.0.4"
